tests/compile_fail/from_str/rename_duplicate.stderr
error: `A`, `B` variants cannot have the same "a" string representation
 --> tests/compile_fail/from_str/rename_duplicate.rs:4:6
  |
4 | enum E {
  |      ^
